# conda_stitch

./: .gitignore  LICENSE  README.md  channeldata.json  index.html  linux-64-current_repodata.json
andreyorst-fzf.kak/: build.sh  recipe.yaml  run_test.sh
catch2/: build.sh  recipe.yaml  run_test.sh
kakoune/: build.sh  recipe.yaml  run_test.sh
kakoune-amalgamate/: activate.sh  recipe.yaml
linux-64/: current_repodata.json  current_repodata.json.bz2  index.html  repodata.json  repodata.json.bz2  repodata_from_packages.json  repodata_from_packages.json.bz2  stitch-boost-0.0.1-hb0f4dca_0.tar.bz2  stitch-boost-0.0.2-hb0f4dca_0.tar.bz2  stitch-buildbuddy-0.0.2-hb0f4dca_0.tar.bz2  stitch-buildbuddy-0.0.3-hb0f4dca_0.tar.bz2  stitch-bzip2_conda-0.0.1-hb0f4dca_0.tar.bz2  stitch-cli11_conda-0.0.1-hb0f4dca_0.tar.bz2  stitch-cpp_expected_conda-0.0.1-hb0f4dca_0.tar.bz2  stitch-doctest-2.4.8-hb0f4dca_0.tar.bz2  stitch-fmt_conda-0.0.1-hb0f4dca_0.tar.bz2  stitch-kakoune-install-0.1.3-hb0f4dca_0.tar.bz2  stitch-kakoune-install-2022.10.05-hb0f4dca_1.tar.bz2  stitch-krb5_conda-0.0.2-hb0f4dca_0.tar.bz2  stitch-lexy-0.0.1-hb0f4dca_0.tar.bz2  stitch-libarchive_conda-0.0.1-hb0f4dca_0.tar.bz2  stitch-libcurl_conda-0.0.2-hb0f4dca_0.tar.bz2  stitch-libnghttp2_conda-0.0.1-hb0f4dca_0.tar.bz2  stitch-libsolv_conda-0.0.1-hb0f4dca_0.tar.bz2  stitch-libssh2_conda-0.0.2-hb0f4dca_0.tar.bz2  stitch-nativejson-benchmark-0.0.1-hb0f4dca_0.tar.bz2  stitch-new-0.0.1-hb0f4dca_0.tar.bz2  (+27 more)
stitch-tools-python/python/toolchain/: BUILD.bazel  WORKSPACE
stitch-tools-python/python/toolchain/lib/: python3.10
(+447 files in other folders)
