load("@rules_python//python:defs.bzl", "py_runtime_pair")

filegroup(name = "files", srcs = glob(["lib/python3.*/**"], exclude = ["lib/python3.10/site-packages/setuptools/script (dev).tmpl", "lib/python3.10/site-packages/setuptools/command/launcher manifest.xml"]))

py_runtime(
    name = "python3_runtime",
    files = [":files"],
    interpreter = ":bin/python3",
    python_version = "PY3",
    visibility = ["//visibility:public"],
)

py_runtime_pair(
    name = "py_runtime",
    py2_runtime = None,
    py3_runtime = ":python3_runtime",
)

toolchain(
    name = "toolchain",
    toolchain = ":py_runtime",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)
